--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,25 @@
 name: metronome_app
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  freezed: ^2.4.5
+  freezed_annotation: ^2.4.1
+  go_router: ^12.0.0
+  go_router_builder: ^2.3.3
+  riverpod: ^2.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
