--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.4
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   go_router_builder: ^2.3.3
-  riverpod: ^2.4.4
 
 dev_dependencies:
   flutter_test:
