--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   go_router_builder: ^2.3.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
