--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.4
-  flutter_svg: ^2.0.8
+  flutter_svg: ^2.0.9
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
@@ -26,5 +26,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/icons/icon_plus.svg
     - assets/icons/icon_minus.svg
+    - assets/icons/icon_plus.svg
+    - assets/icons/icon_note.svg
+    - assets/images/background.jpg
