--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.4.4
   flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.6.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
@@ -29,4 +30,7 @@ flutter:
     - assets/icons/icon_minus.svg
     - assets/icons/icon_plus.svg
     - assets/icons/icon_note.svg
-    - assets/images/background.jpg
+    - assets/images/main_page_background.jpg
+    - assets/images/auth_page_background.jpg
+    - assets/images/logo.png
+
