--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.3
   flutter_riverpod: ^2.4.4
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
@@ -17,12 +18,17 @@ dependencies:
   go_router: ^12.0.0
   go_router_builder: ^2.3.3
   google_fonts: ^6.1.0
+  hooks_riverpod: ^2.4.8
+  riverpod_annotation: ^2.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
+  riverpod_generator: ^2.3.8
+  custom_lint: ^0.5.7
+  riverpod_lint: ^2.3.6
 
 flutter:
   uses-material-design: true
