--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
+  assets_audio_player: ^3.1.1
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.3
@@ -39,4 +40,7 @@ flutter:
     - assets/images/main_page_background.jpg
     - assets/images/auth_page_background.jpg
     - assets/images/logo.png
+    - assets/audio/pno_m.mp3
+    - assets/audio/pno_s.mp3
+
 
