--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,12 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
-  go_router: ^12.0.0
+  go_router: ^12.1.3
   go_router_builder: ^2.3.3
   google_fonts: ^6.1.0
   hooks_riverpod: ^2.4.8
+  http: ^1.1.0
+  json_annotation: ^4.8.1
   riverpod_annotation: ^2.3.2
 
 dev_dependencies:
@@ -32,6 +34,7 @@ dev_dependencies:
   riverpod_generator: ^2.3.8
   custom_lint: ^0.5.7
   riverpod_lint: ^2.3.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
