--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^1.1.0
   json_annotation: ^4.8.1
   riverpod_annotation: ^2.3.2
+  soundpool: ^2.4.1
 
 dev_dependencies:
   flutter_test:
