--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ dependencies:
   go_router: ^12.1.3
   go_router_builder: ^2.3.3
   google_fonts: ^6.1.0
+  google_sign_in: ^6.1.6
   hooks_riverpod: ^2.4.8
   http: ^1.1.0
   json_annotation: ^4.8.1
+  random_name_generator: ^1.2.0
   riverpod_annotation: ^2.3.2
   soundpool: ^2.4.1
 
